# pib_prediction

./: README.md  pyproject.toml  requirements.txt
docs/src/: index.md  pib_predict_interface.md  process.md  train_model.md  utils.md
src/: pib_predict_interface.py
