
[tool.poetry]
name = "pib_prediction"
version = "0.1.0"
description = ""
authors = ["BRUNO GALVÃO"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.7,<3.13.0"
hydra-core = "^1.3.2"
matplotlib = "^3.8.0" 
python-bcb = "^0.3.3"
pandas = "^2.2.0"
numpy = ">=1.26.0,<2.0.0"
streamlit = "^1.33.0"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.6"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true